# coin_flip_simulation

./: Cargo.toml  README.md  results.json
src/: lib.rs  main.rs
